// Jest Snapshot v1, https://goo.gl/fbAQLP


exports[`plugin-chart-piw Chart with legend left / without labels 1`] = `
Object {
  "LegendProps": Array [
    Object {
      "align": "left",
      "iconSize": 10,
      "iconType": "square",
      "layout": "vertical",
      "onClick": [Function],
      "payload": Array [
        Object {
          "color": "#1f77b4",
          "id": "2020",
          "payload": Object {
            "AVG(efficiency)": 0.0566666666666667,
            "subject": "2020",
            "fullMark": 150,
          },
          "type": "circle",
          "value": "2020",
        },
        Object {
          "color": "#ff7f0e",
          "id": "2018",
          "payload": Object {
            "AVG(efficiency)": 0.038,
            "subject": "2018",
            "fullMark": 150,
          },
          "type": "circle",
          "value": "2018",
        },
        Object {
          "color": "#2ca02c",
          "id": "2019",
          "payload": Object {
            "AVG(efficiency)": 0.0162068965517241,
            "subject": "2019",
            "fullMark": 150,
          },
          "type": "circle",
          "value": "2019",
        },
        Object {
          "color": "#d62728",
          "id": "Total subject",
          "payload": Object {
            "AVG(efficiency)": 0.0138888888888889,
            "subject": "Total subject",
            "fullMark": 150,
          },
          "type": "circle",
          "value": "Total subject",
        },
        Object {
          "color": "#9467bd",
          "id": "2017",
          "payload": Object {
            "AVG(efficiency)": 0.011304347826087,
            "subject": "2017",
            "fullMark": 150,
          },
          "type": "circle",
          "value": "2017",
        },
      ],
      "verticalAlign": "middle",
      "wrapperStyle": Object {
        "maxHeight": 400,
        "width": 0,
      },
    },
    Object {},
  ],
  "RadarChartProps": Array [
    Object {
      "children": Array [
        <mockConstructor
          align="left"
          iconSize={10}
          iconType="square"
          layout="vertical"
          onClick={[Function]}
          payload={
            Array [
              Object {
                "color": "#1f77b4",
                "id": "2020",
                "payload": Object {
                  "AVG(efficiency)": 0.0566666666666667,
                  "subject": "2020",
                  "fullMark": 150,
                },
                "type": "circle",
                "value": "2020",
              },
              Object {
                "color": "#ff7f0e",
                "id": "2018",
                "payload": Object {
                  "AVG(efficiency)": 0.038,
                  "subject": "2018",
                  "fullMark": 150,
                },
                "type": "circle",
                "value": "2018",
              },
              Object {
                "color": "#2ca02c",
                "id": "2019",
                "payload": Object {
                  "AVG(efficiency)": 0.0162068965517241,
                  "subject": "2019",
                  "fullMark": 150,
                },
                "type": "circle",
                "value": "2019",
              },
              Object {
                "color": "#d62728",
                "id": "Total subject",
                "payload": Object {
                  "AVG(efficiency)": 0.0138888888888889,
                  "subject": "Total subject",
                  "fullMark": 150,
                },
                "type": "circle",
                "value": "Total subject",
              },
              Object {
                "color": "#9467bd",
                "id": "2017",
                "payload": Object {
                  "AVG(efficiency)": 0.011304347826087,
                  "subject": "2017",
                  "fullMark": 150,
                },
                "type": "circle",
                "value": "2017",
              },
            ]
          }
          verticalAlign="middle"
          wrapperStyle={
            Object {
              "maxHeight": 400,
              "width": 0,
            }
          }
        />,
        false,
      ],
      "height": 400,
      "width": 800,
    },
    Object {},
  ],
  "RadarProps": undefined,
}
`;

exports[`plugin-chart-piw Chart with legend top / percentage labels  1`] = `
Object {
  "LegendProps": Array [
    Object {
      "align": "center",
      "iconSize": 10,
      "iconType": "square",
      "layout": "horizontal",
      "onClick": [Function],
      "payload": Array [
        Object {
          "color": "#1f77b4",
          "id": "2020",
          "payload": Object {
            "AVG(efficiency)": 0.0566666666666667,
            "subject": "2020",
            "fullMark": 150,
          },
          "type": "circle",
          "value": "2020",
        },
        Object {
          "color": "#ff7f0e",
          "id": "2018",
          "payload": Object {
            "AVG(efficiency)": 0.038,
            "subject": "2018",
            "fullMark": 150,
          },
          "type": "circle",
          "value": "2018",
        },
        Object {
          "color": "#2ca02c",
          "id": "2019",
          "payload": Object {
            "AVG(efficiency)": 0.0162068965517241,
            "subject": "2019",
            "fullMark": 150,
          },
          "type": "circle",
          "value": "2019",
        },
        Object {
          "color": "#d62728",
          "id": "Total subject",
          "payload": Object {
            "AVG(efficiency)": 0.0138888888888889,
            "subject": "Total subject",
            "fullMark": 150,
          },
          "type": "circle",
          "value": "Total subject",
        },
        Object {
          "color": "#9467bd",
          "id": "2017",
          "payload": Object {
            "AVG(efficiency)": 0.011304347826087,
            "subject": "2017",
            "fullMark": 150,
          },
          "type": "circle",
          "value": "2017",
        },
      ],
      "verticalAlign": "top",
      "wrapperStyle": Object {
        "maxHeight": 400,
      },
    },
    Object {},
  ],
  "RadarChartProps": Array [
    Object {
      "children": Array [
        <mockConstructor
          align="center"
          iconSize={10}
          iconType="square"
          layout="horizontal"
          onClick={[Function]}
          payload={
            Array [
              Object {
                "color": "#1f77b4",
                "id": "2020",
                "payload": Object {
                  "AVG(efficiency)": 0.0566666666666667,
                  "subject": "2020",
                  "fullMark": 150,
                },
                "type": "circle",
                "value": "2020",
              },
              Object {
                "color": "#ff7f0e",
                "id": "2018",
                "payload": Object {
                  "AVG(efficiency)": 0.038,
                  "subject": "2018",
                  "fullMark": 150,
                },
                "type": "circle",
                "value": "2018",
              },
              Object {
                "color": "#2ca02c",
                "id": "2019",
                "payload": Object {
                  "AVG(efficiency)": 0.0162068965517241,
                  "subject": "2019",
                  "fullMark": 150,
                },
                "type": "circle",
                "value": "2019",
              },
              Object {
                "color": "#d62728",
                "id": "Total subject",
                "payload": Object {
                  "AVG(efficiency)": 0.0138888888888889,
                  "subject": "Total subject",
                  "fullMark": 150,
                },
                "type": "circle",
                "value": "Total subject",
              },
              Object {
                "color": "#9467bd",
                "id": "2017",
                "payload": Object {
                  "AVG(efficiency)": 0.011304347826087,
                  "subject": "2017",
                  "fullMark": 150,
                },
                "type": "circle",
                "value": "2017",
              },
            ]
          }
          verticalAlign="top"
          wrapperStyle={
            Object {
              "maxHeight": 400,
            }
          }
        />,
        <mockConstructor
          activeIndex={0}
          cx="50%"
          data={
            Array [
              Object {
                "AVG(efficiency)": 0.0566666666666667,
                "subject": "2020",
                "fullMark": 150,
              },
              Object {
                "AVG(efficiency)": 0.038,
                "subject": "2018",
                "fullMark": 150,
              },
              Object {
                "AVG(efficiency)": 0.0162068965517241,
                "subject": "2019",
                "fullMark": 150,
              },
              Object {
                "AVG(efficiency)": 0.0138888888888889,
                "subject": "Total subject",
                "fullMark": 150,
              },
              Object {
                "AVG(efficiency)": 0.011304347826087,
                "subject": "2017",
                "fullMark": 150,
              },
            ]
          }
          dataKey="AVG(efficiency)"
          label={[Function]}
          onClick={[Function]}
          outerRadius={100}
        >
          <Cell
            fill="#1f77b4"
          />
          <Cell
            fill="#ff7f0e"
          />
          <Cell
            fill="#2ca02c"
          />
          <Cell
            fill="#d62728"
          />
          <Cell
            fill="#9467bd"
          />
        </mockConstructor>,
      ],
      "height": 400,
      "width": 800,
    },
    Object {},
  ],
  "RadarProps": Array [
    Object {
      "activeIndex": 0,
      "children": Array [
        <Cell
          fill="#1f77b4"
        />,
        <Cell
          fill="#ff7f0e"
        />,
        <Cell
          fill="#2ca02c"
        />,
        <Cell
          fill="#d62728"
        />,
        <Cell
          fill="#9467bd"
        />,
      ],
      "cx": "50%",
      "data": Array [
        Object {
          "AVG(efficiency)": 0.0566666666666667,
          "subject": "2020",
          "fullMark": 150,
        },
        Object {
          "AVG(efficiency)": 0.038,
          "subject": "2018",
          "fullMark": 150,
        },
        Object {
          "AVG(efficiency)": 0.0162068965517241,
          "subject": "2019",
          "fullMark": 150,
        },
        Object {
          "AVG(efficiency)": 0.0138888888888889,
          "subject": "Total subject",
          "fullMark": 150,
        },
        Object {
          "AVG(efficiency)": 0.011304347826087,
          "subject": "2017",
          "fullMark": 150,
        },
      ],
      "dataKey": "AVG(efficiency)",
      "label": [Function],
      "onClick": [Function],
      "outerRadius": 100,
    },
    Object {},
  ],
}
`;
